Address teamscale findings